[LCR-14] refactor: ManagerRole 사용 로직 수정